--- a/interstellar_library/.vscode/launch.json
+++ b/interstellar_library/.vscode/launch.json
@@ -5,19 +5,21 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "node",
+            "name": "NESTJS",
+            "program": "${workspaceFolder}\\src\\main.ts",
             "request": "launch",
-            "name": "Debug Typescript",
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}\\src\\main.ts",
-            "runtimeArgs": ["-r", "ts-node/register", "-r", "tsconfig-paths/register"],
-            "console": "integratedTerminal",
-            "preLaunchTask": "tsc: build - tsconfig.json",
-            "outFiles": [
-                "${workspaceFolder}/dist/**/*.js"
-            ]
+            "type": "node",
+            "runtimeArgs": [
+                // "--nolazy",
+                "-r",
+                "ts-node/register",
+                "-r",
+                "tsconfig-paths/register"
+            ],
+            "console": "integratedTerminal"
         }
     ]
 }
